--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,6 @@ RewriteRule ^(.*)$ %{ENV:BASE}index.php [NC,L]
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "*"
 </IfModule>
+
+php_value memory_limit 1024M
+
